--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="app/bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="./css/app.css">
   <title>ECMAScript 6入门</title>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <script src="js/jquery-1.11.0.min.js"></script>
-  <script src="js/jquery-ui.min.js"></script>
-  <script src="js/marked.js"></script>
-  <script src="js/store.js"></script>
-  <script src="js/ditto.js"></script>
-  <script src="js/prism.js"></script>
+  <script src="./js/jquery-1.11.0.min.js"></script>
+  <script src="./js/jquery-ui.min.js"></script>
+  <script src="./js/marked.js"></script>
+  <script src="./js/store.js"></script>
+  <script src="./js/ditto.js"></script>
+  <script src="./js/prism.js"></script>
 </head>
 <body>
   <!-- essential -->
